--- a/about.html
+++ b/about.html
@@ -4,7 +4,6 @@
 <!--awards and achievements-->
 <!--talk to us-->
 
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,72 +24,82 @@
 </head>
 <body>
     <nav>
-        <div class="nav-center">
-          <h4>Memphis Hospital</h4>
-            <!--nav header-->
-            <div class="nav-header">
-                <i class="fa-regular fa-hospital"></i> 
-               <button class="nav-toggle">
-                <i class="fas fa-bars"></i>
-               </button>
-            </div>
-            <!-- links -->
-  <ul class="links">
-    <li>
-      <a href="index.html">Home</a>
-    </li>
-    <li>
-      <a href="about.html">About Us</a>
-    </li>
-    <li>
-      <a href="services.html">Services</a>
-    </li>
-    <li>
-      <a href="projects.html">Community Projects</a>
-    </li>
-    <li>
-        <a href="careers.html">Careers</a>
-      </li>
-      <li>
-        <a href="contact-us.html">Contacts</a>
-      </li>
-    <li>
-        <a href="feedback.html">reviews</a>
-      </li>
-      <li>
-        <a href="more.html">More Services</a>
-      </li>
-  </ul>
-  <!-- social media -->
-  <ul class="social-icons">
-    <li>
-      <a href="https://www.twitter.com">
-        <i class="fab fa-facebook"></i>
-      </a>
-    </li>
-    <li>
-      <a href="https://www.twitter.com">
-        <i class="fab fa-twitter"></i>
-      </a>
-    </li>
-    <li>
-      <a href="https://www.twitter.com">
-        <i class="fab fa-behance"></i>
-      </a>
-    </li>
-    <li>
-      <a href="https://www.twitter.com">
-        <i class="fab fa-linkedin"></i>
-      </a>
-    </li>
-    <li>
-      <a href="https://www.twitter.com">
-        <i class="fab fa-sketch"></i>
-      </a>
-    </li>
-  </ul>
-        </div>
-      </nav> 
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+        Memphis Hospital </a>
+    </div>
+            <ul class="navbar-nav justify-content-end">
+              <ul class="links">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">Community Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="careers.html">Careers</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact-us.html">Contacts</a>
+                  </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="feedback.html">reviews</a>
+                  </li>
+
+                  <li class="nav-item dropdown">
+                  
+                    <a class="nav-link dropdown-toggle" href="more.html" role="button" data-bs-toggle="dropdown">More Services</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#memgym">Memphis Hospital Gym</a></li>
+                      <li><a class="dropdown-item" href="#zumba">Memphis Zumba Thursdays</a></li>
+                      <li><a class="dropdown-item" href="#hikers">Healthy Hikers</a></li>
+                    </ul>
+                  </li>
+              </ul>
+              <!-- social media -->
+              <ul class="social-icons">
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-sketch"></i>
+                  </a>
+                </li>
+              </ul>
+
+            </ul>
+    </nav>
+
+    <main>
+      <h1>About us</h1>
+    </main>
+
+
 
 </body>
 </html>
