--- a/feedback.html
+++ b/feedback.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title> La Paolo Pizzaria </title> 
+  <title> Memphis Hospital </title> 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,71 +10,84 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="reviews.css">
+    <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     
  
 </head>
-  <body>
+<body>
     <nav>
-      <div class="nav-center">
-        <h4>La Paolo Pizzaria</h4>
-          <!--nav header-->
-          <div class="nav-header">
-             <img src="" class="logo" alt="logo"> 
-             <button class="nav-toggle">
-              <i class="fas fa-bars"></i>
-             </button>
-          </div>
-          <!-- links -->
-<ul class="links">
-  <li>
-    <a href="index.html">home</a>
-  </li>
-  <li>
-    <a href="about.html">about</a>
-  </li>
-  <li>
-    <a href="projects.html">projects</a>
-  </li>
-  <li>
-    <a href="contact.html">contact</a>
-  </li>
-  <li>
-      <a href="contact.html">reviews</a>
-    </li>
-</ul>
-<!-- social media -->
-<ul class="social-icons">
-  <li>
-    <a href="https://www.twitter.com">
-      <i class="fab fa-facebook"></i>
-    </a>
-  </li>
-  <li>
-    <a href="https://www.twitter.com">
-      <i class="fab fa-twitter"></i>
-    </a>
-  </li>
-  <li>
-    <a href="https://www.twitter.com">
-      <i class="fab fa-behance"></i>
-    </a>
-  </li>
-  <li>
-    <a href="https://www.twitter.com">
-      <i class="fab fa-linkedin"></i>
-    </a>
-  </li>
-  <li>
-    <a href="https://www.twitter.com">
-      <i class="fab fa-sketch"></i>
-    </a>
-  </li>
-</ul>
-      </div>
-    </nav>  
+      <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">
+        Memphis Hospital </a>
+    </div>
+            <ul class="navbar-nav justify-content-end">
+              <ul class="links">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html">About Us</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="services.html">Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="projects.html">Community Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="careers.html">Careers</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contact-us.html">Contacts</a>
+                  </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="feedback.html">reviews</a>
+                  </li>
+
+                  <li class="nav-item dropdown">
+                  
+                    <a class="nav-link dropdown-toggle" href="more.html" role="button" data-bs-toggle="dropdown">More Services</a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#memgym">Memphis Hospital Gym</a></li>
+                      <li><a class="dropdown-item" href="#zumba">Memphis Zumba Thursdays</a></li>
+                      <li><a class="dropdown-item" href="#hikers">Healthy Hikers</a></li>
+                    </ul>
+                  </li>
+              </ul>
+              <!-- social media -->
+              <ul class="social-icons">
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-facebook"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-behance"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="https://www.twitter.com">
+                    <i class="fab fa-sketch"></i>
+                  </a>
+                </li>
+              </ul>
+
+            </ul>
+    </nav>
     <main>
       <section class="container">
 
@@ -90,7 +103,7 @@
             <div class="card" style="width: 400px">
               <img id="person-img"
                 class="card-img-top"
-                src="./woman.png"
+                src="woman.png"
                 alt="woman"
                 style="width: 100%"
               />
@@ -117,9 +130,9 @@
             <button type="button" class="btn btn-warning random-btn">Surprise me</button>
 
           </article>
-        </div>
       </section>
     </main>
+
     <!--javascript-->
     <script src="reviews.js"></script>
   </body>
