--- a/navpage.html
+++ b/navpage.html
@@ -18,7 +18,16 @@
     
     <nav>
         <div class="container-fluid">
-             <img src="hospital.png" alt="hospital" style="width:40px;" class="rounded"></div>
+            <div class="d-flex justify-content-between"  >
+                <span>
+                <img src="hospital.png" alt="hospital" style="width:40px;" class="rounded">
+            </span>
+        <span>
+                <button type="button" class="btn btn-secondary">COVID-19 HELPLINE</button>
+                <button type="button" class="btn btn-dark">CONTACT US</button>
+            </span>
+            </div>
+            </div>
         <div>b</div>
         <div>c</div>
     </nav>
