--- a/nav.html
+++ b/nav.html
@@ -86,8 +86,8 @@
   
     </div>
       <div class="col">
-              <ul class="navbar-nav ">
-                <ul class="links">
+              
+                <ul class="links navbar-nav">
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
